# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = "2021"
name = "opendal-fuzz"
publish = false
version = "0.0.0"

license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = "1.0.71"
arbitrary = { version = "1.3.0", features = ["derive"] }
bytes = "1.2"
dotenvy = "0.15.6"
libfuzzer-sys = "0.4"
opendal = { path = "..", features = ["tests"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "fuzz_reader"
path = "fuzz_reader.rs"

[[bin]]
name = "fuzz_writer"
path = "fuzz_writer.rs"
